--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ security.basic.enabled=false
 management.security.enabled=false
 #spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
+logging.level.org.springframework.web=DEBUG
+
